--- a/src/frontend/assets/scss/_var.scss
+++ b/src/frontend/assets/scss/_var.scss
@@ -1,8 +1,8 @@
-//General Ipad Variables
-$ipad-height: 75vh;
+//General tablet Variables
+$tablet-height: 75vh;
 
-//Variables of the Ipad Frame
+//Variables of the tablet Frame
 $frame-color: #111111;
 
-//Variables of the Ipad Case
+//Variables of the tablet Case
 $case-color: #555555;
