--- a/src/frontend/assets/scss/apps/_frame.scss
+++ b/src/frontend/assets/scss/apps/_frame.scss
@@ -7,8 +7,8 @@
     position: relative;
 
     background-color: $frame-color;
-    height: $ipad-height;
-    width: $ipad-height * 1.5;
+    height: $tablet-height;
+    width: $tablet-height * 1.5;
 
     border-radius: 5vh;
     display: grid;
@@ -24,12 +24,25 @@
       width: 6vh;
     }
 
+    #camera-outer {
+      position: absolute;
+      left: 2.5vh;
+      @include casing(#113322, 0.3vh, 5, true);
+      border-radius: 50%;
+      display: grid;
+      place-items: center;
+      #camera-inner {
+        @include casing(#112233, 0.3vh, 5, false);
+        border-radius: inherit;
+      }
+    }
+
     #display {
       border-radius: 1px;
       position: relative;
-      left: $ipad-height * -0.012;
-      height: $ipad-height * 0.93;
-      width: $ipad-height * 1.3;
+      left: $tablet-height * -0.012;
+      height: $tablet-height * 0.93;
+      width: $tablet-height * 1.3;
       background-color: #888888;
     }
   }
