--- a/src/frontend/assets/css/style.css
+++ b/src/frontend/assets/css/style.css
@@ -78,32 +78,36 @@
   margin-left: 0.2vh;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-column-gap: 0.1vh;
   place-content: bottom;
-  width: 3vh;
+  width: auto;
   height: 100%;
 }
 
 #display #header #internet-symbol .bar {
-  border-radius: 2px;
+  border-radius: 1px;
   margin-bottom: 0.3vh;
   margin-top: auto;
-  width: 0.9vh;
+  width: 0.8vh;
   background-color: #ffffffbb;
 }
 
 #display #header #internet-symbol #bar1 {
-  height: 25%;
+  height: 20%;
 }
 
 #display #header #internet-symbol #bar2 {
-  height: 50%;
+  height: 40%;
 }
 
 #display #header #internet-symbol #bar3 {
-  height: 75%;
+  height: 60%;
+}
+
+#display #header #internet-symbol #bar4 {
+  height: 80%;
 }
 
 #display #header #clock {
