--- a/src/frontend/assets/scss/apps/_display.scss
+++ b/src/frontend/assets/scss/apps/_display.scss
@@ -19,26 +19,29 @@
       float: left;
       margin-left: 0.2vh;
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
       grid-column-gap: 0.1vh;
       place-content: bottom;
-      width: 3vh;
+      width: auto;
       height: 100%;
       .bar {
-        border-radius: 2px;
+        border-radius: 1px;
         margin-bottom: 0.3vh;
         margin-top: auto;
-        width: 0.9vh;
+        width: 0.8vh;
         background-color: $header-el-color;
       }
       #bar1 {
-        height: 25%;
+        height: 20%;
       }
       #bar2 {
-        height: 50%;
+        height: 40%;
       }
       #bar3 {
-        height: 75%;
+        height: 60%;
+      }
+      #bar4 {
+        height: 80%;
       }
     }
 
