--- a/src/frontend/assets/css/style.css
+++ b/src/frontend/assets/css/style.css
@@ -56,11 +56,22 @@
   background-color: #888888;
 }
 
+#off-overlay {
+  border-radius: 1px;
+  position: absolute;
+  left: 6.6vh;
+  height: 69.75vh;
+  width: 97.5vh;
+  background: #000000;
+}
+
 #display {
+  opacity: 0%;
+  -webkit-transition: linear opacity 0.1s;
+  transition: linear opacity 0.1s;
   background-image: url("../img/tablet-bg.png");
   background-color: #ffbb55;
   background-size: cover;
-  position: relative;
 }
 
 #display #header {
@@ -115,6 +126,14 @@
   font-family: sans-serif;
   bottom: -0.2vh;
   color: #ffffffbb;
+}
+
+#display #header #battery-symbol {
+  margin-right: 0.3vh;
+  float: right;
+  -webkit-filter: invert(100%) opacity(75%);
+          filter: invert(100%) opacity(75%);
+  height: 2.5vh;
 }
 
 body, html {
