--- a/src/frontend/assets/scss/apps/_display.scss
+++ b/src/frontend/assets/scss/apps/_display.scss
@@ -1,10 +1,20 @@
 @import "../_var";
 
+#off-overlay {
+  border-radius: 1px;
+  position: absolute;
+  left: $tablet-height * 0.088;
+  height: $tablet-height * 0.93;
+  width: $tablet-height * 1.3;
+  background: #000000;
+}
+
 #display {
+  opacity: 0%;
+  transition: linear opacity 0.1s;
   background-image: url("../img/tablet-bg.png");
   background-color: #ffbb55;
   background-size: cover;
-  position: relative;
 
   #header {
     top: 0;
@@ -50,6 +60,13 @@
       font-family: sans-serif;
       bottom: -0.2vh;
       color: $header-el-color;
+    }
+
+    #battery-symbol {
+      margin-right: 0.3vh;
+      float: right;
+      filter: invert(100%) opacity(75%);
+      height: $header-height;
     }
   }
 }
