--- a/src/tablet_vue_js/src/assets/scss/_var.scss
+++ b/src/tablet_vue_js/src/assets/scss/_var.scss
@@ -8,6 +8,10 @@ $frame-color: #111111;
 $case-color: #555555;
 
 //Variables of tablet OS
+$os-font: arial, helvetica, sans-serif;
 $header-height: 2.5vh;
 $header-bg-color: #808080b0;
-$header-el-color: #ffffffbb
+$header-el-color: #ffffffbb;
+$app-size: 9vh;
+$app-border-radius: 2vh;
+$text-color: #eeeeee;
