new additions (settings...)
-added functional config system
-started work on the settings app

--- a/src/tablet_vue_js/src/assets/scss/_var.scss
+++ b/src/tablet_vue_js/src/assets/scss/_var.scss
@@ -15,3 +15,6 @@ $header-el-color: #ffffffbb;
 $app-size: 9vh;
 $app-border-radius: 2vh;
 $text-color: #eeeeee;
+$light-primary: #eeeeee;
+$light-secondary: #aaaaaa;
+$light-text-color: #222222;
