--- a/src/tablet_vue_js/src/assets/scss/_var.scss
+++ b/src/tablet_vue_js/src/assets/scss/_var.scss
@@ -15,6 +15,20 @@ $header-el-color: #ffffffbb;
 $app-size: 9vh;
 $app-border-radius: 2vh;
 $text-color: #eeeeee;
+
 $light-primary: #eeeeee;
 $light-secondary: #aaaaaa;
 $light-text-color: #222222;
+$light-text-color-hover: #333333;
+
+$dark-primary: #333333;
+$dark-secondary: #222222;
+$dark-text-color: #cfcfcf;
+$dark-text-color-hover: #afafaf;
+
+:root {
+  --primary: #{$light-primary};
+  --secondary: #{$light-secondary};
+  --text-color: #{$light-text-color};
+  --text-color-hover: #{$light-text-color-hover};
+}
