--- a/src/tablet_vue_js/src/assets/scss/_var.scss
+++ b/src/tablet_vue_js/src/assets/scss/_var.scss
@@ -20,15 +20,21 @@ $light-primary: #eeeeee;
 $light-secondary: #aaaaaa;
 $light-text-color: #222222;
 $light-text-color-hover: #333333;
+$light-scrollbar-color: #3333337f;
+$light-scrollbar-color-hover: #4444447f;
 
 $dark-primary: #333333;
 $dark-secondary: #222222;
 $dark-text-color: #cfcfcf;
 $dark-text-color-hover: #afafaf;
+$dark-scrollbar-color: #cfcfcf7f;
+$dark-scrollbar-color-hover: #bfbfbf7f;
 
 :root {
   --primary: #{$light-primary};
   --secondary: #{$light-secondary};
   --text-color: #{$light-text-color};
   --text-color-hover: #{$light-text-color-hover};
+  --scrollbar-color: #{$light-scrollbar-color};
+  --scrollbar-color-hover: #{$light-scrollbar-color-hover};
 }
