--- a/src/tablet_vue_js/src/assets/scss/_var.scss
+++ b/src/tablet_vue_js/src/assets/scss/_var.scss
@@ -9,23 +9,27 @@ $case-color: #555555;
 
 //Variables of tablet OS
 $os-font: arial, helvetica, sans-serif;
-$header-height: 2.5vh;
+$header-height: 2.75vh;
 $header-bg-color: #ffffff00;
 $header-el-color: #ffffffbb;
 $app-size: 9vh;
 $app-border-radius: 2vh;
 $text-color: #eeeeee;
 
+//these values are just for color themeing reference
 $light-primary: #eeeeee;
 $light-secondary: #aaaaaa;
+$light-secondary-hover: #777777;
 $light-trinary: #dddddd;
 $light-text-color: #222222;
 $light-text-color-hover: #333333;
 $light-scrollbar-color: #3333337f;
 $light-scrollbar-color-hover: #4444447f;
 
+//these values are just for color themeing reference
 $dark-primary: #333333;
 $dark-secondary: #666666;
+$dark-secondary-hover: #888888;
 $dark-trinary:#444444;
 $dark-text-color: #cfcfcf;
 $dark-text-color-hover: #afafaf;
@@ -35,6 +39,7 @@ $dark-scrollbar-color-hover: #bfbfbf7f;
 :root {
   --primary: #{$light-primary};
   --secondary: #{$light-secondary};
+  --secondary-hover: #{$light-secondary-hover};
   --trinary: #{$light-trinary};
   --text-color: #{$light-text-color};
   --text-color-hover: #{$light-text-color-hover};
